--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -213,15 +213,30 @@
         <div class="row" style="background-color: #004000">
 
 
-          <div class="col-sm-12 col-md-12">
 
-            
-              <app-menu-admin></app-menu-admin>
-              <app-menu-inicio></app-menu-inicio>
-              <app-menu-instalacion></app-menu-instalacion>
-              <app-menu-jugador></app-menu-jugador>
-              <app-menu-club></app-menu-club>
+
+            <div class="col-sm-12 col-md-12">
+              <ng-container *ngIf="tipoUsuario === 'Usuario'">
+                <app-menu-jugador></app-menu-jugador>
+              </ng-container>
+
+
+                <app-menu-admin></app-menu-admin>
+              
+
+              <ng-container *ngIf="tipoUsuario === 'Club'">
+                <app-menu-club></app-menu-club>
+              </ng-container>
+
+              <ng-container *ngIf="tipoUsuario === 'Instalacion'">
+                <app-menu-instalacion></app-menu-instalacion>
+              </ng-container>
+
+              <ng-container *ngIf="!tipoUsuario">
+                <app-menu-inicio></app-menu-inicio> <!-- Menú por defecto si no hay tipo de usuario -->
+              </ng-container>
             </div>
+
           </div>
         </div>
       </div>
