--- a/src/app/usuario/alta-usuario/alta-usuario.component.html
+++ b/src/app/usuario/alta-usuario/alta-usuario.component.html
@@ -48,11 +48,11 @@
               <tr>
                 <td>
                   <label for="passwordUsuario" class="formularioLabel">Contraseña</label>
-                  <input type="password" class="form-control" id="passwordUsuario" name="passwordUsuario" [(ngModel)]="usuario.passwordUsuario" required>
+                  <input type="password" class="form-control" id="passwordUsuario" name="passwordUsuario" [(ngModel)]="password" required>
                 </td>
                 <td>
                   <label for="passwordUsuario" class="formularioLabel">Repetir Contraseña</label>
-                  <input type="password" class="form-control" id="repetirPasswordUsuario" name="repetirPasswordUsuario" [(ngModel)]="usuario.passwordUsuario" required>
+                  <input type="password" class="form-control" id="repetirPasswordUsuario" name="repetirPasswordUsuario" [(ngModel)]="passwordRepetida" required>
                 </td>
 
               </tr>
