--- a/src/app/instalacion/alta-instalacion/alta-instalacion.component.html
+++ b/src/app/instalacion/alta-instalacion/alta-instalacion.component.html
@@ -43,13 +43,13 @@
 										<td><label for="passwordInstalacion"
 											class="formularioLabel">Contraseña</label> <input
 											type="password" class="form-control" id="passwordInstalacion"
-											name="passwordInstalacion" [(ngModel)]="instalacion.passwordInstalacion" required
+											name="passwordInstalacion" [(ngModel)]="password" required
 											style="font-size: 1vw; border: 1px solid #818181; height: 2.5vw;">
 										</td>
 										<td><label for="repasswordInstalacion"
 											class="formularioLabel">Repetir Contraseña</label> <input type="password" class="form-control"
                       id="repasswordInstalacion" name="repasswordInstalacion"
-                      [(ngModel)]="repasswordInstalacion" required
+                      [(ngModel)]="passwordRepetida" required
                       style="font-size: 1vw; border: 1px solid #818181; height: 2.5vw;">
 
 										</td>
