--- a/src/app/instalacion/lista-instalacion/lista-instalacion.component.css
+++ b/src/app/instalacion/lista-instalacion/lista-instalacion.component.css
@@ -1,61 +1,113 @@
-.contenedor{
-  height: 82vh;
-}
-
-.contenido {
-	margin-left: 16.6667%;
-	/* El mismo ancho que el menú lateral para que el contenido no se solape */
-	padding: 7px;
-	/* Añadido para separar un poco el contenido de los bordes */
-}
-.tablaDatos {
+.contenedor {
+	height: 82vh;
+  }
+  
+  .contenido {
+	margin-left: 16.6667%; /* El mismo ancho que el menú lateral para que el contenido no se solape */
+	padding: 7px; /* Añadido para separar un poco el contenido de los bordes */
+  }
+  
+  .tablaDatos {
 	width: 100%;
 	border-collapse: collapse;
 	background-color: #eafeea;
 	color: black;
-	font-size: 1.1 vw;
-	box-shadow: 0vw 0.4vw 0.8vw rgba(0, 0, 0, 0.3), 0vw -0.4vw 0.8vw
-		rgba(0, 0, 0, 0.15);
+	font-size: 1.1vw;
+	box-shadow: 0vw 0.4vw 0.8vw rgba(0, 0, 0, 0.3), 0vw -0.4vw 0.8vw rgba(0, 0, 0, 0.15);
 	font-family: 'Open Sans', sans-serif;
-}
-.tablaDatos th, .tablaDatos td {
+  }
+  
+  .tablaDatos th, .tablaDatos td {
 	border: 0.11vw solid #aeaeae;
 	padding: 0.6vw;
 	text-align: center;
-}
-.tablaDatos th {
+  }
+  
+  .tablaDatos th {
 	text-decoration: underline;
 	font-style: italic;
 	font-size: 1.4vw;
 	font-weight: bold;
-}
-
-.tablaDatos tr:nth-child(even) {
-	background-color: #e0fee0;
-}
-.botonEliminarAdmin {
+	background-color: #1e7d31; /* Verde elegante */
+	color: white;
+  }
+  
+  .tablaDatos td {
+	border: 0.11vw solid #aeaeae;
+	padding: 0.6vw;
+	text-align: center;
+	font-size: 1.3vw;
+  }
+  
+  .tablaDatos tr:nth-child(even) {
+	background-color: #e0fee0; /* Fondo para filas pares */
+  }
+  
+  .tablaDatos tr:nth-child(odd) {
+	background-color: #f1f1f1; /* Fondo para filas impares */
+  }
+  
+  .tablaDatos tr:hover {
+	background-color: #f9f9f9; /* Resaltar fila al pasar el ratón */
+	cursor: pointer;
+  }
+  
+  /* Establecer el tamaño de las columnas */
+  .tablaDatos th:nth-child(1), .tablaDatos td:nth-child(1) {
+	width: 7%; /* Columna "Imagen" */
+  }
+  
+  .tablaDatos th:nth-child(2), .tablaDatos td:nth-child(2) {
+	width: 7%; /* Columna "ID" */
+  }
+  
+  .tablaDatos th:nth-child(3), .tablaDatos td:nth-child(3) {
+	width: 30%; /* Columna "Nombre Instalación" */
+  }
+  
+  .tablaDatos th:nth-child(4), .tablaDatos td:nth-child(4) {
+	width: 30%; /* Columna "Email Instalación" */
+  }
+  
+  .tablaDatos th:nth-child(5), .tablaDatos td:nth-child(5) {
+	width: 10%; /* Columna "Teléfono" */
+  }
+  
+  .tablaDatos th:nth-child(6), .tablaDatos td:nth-child(6) {
+	width: 10%; /* Columna "Opciones" */
+  }
+  
+  .usuario-imagen {
+	width: 50px;
+	height: 50px;
+	border-radius: 15%;
+	object-fit: cover;
+  }
+  
+  .botonEliminarAdmin {
 	border: 1px solid black;
 	height: 2vw;
-  margin-right: 1vw;
-}
-
-.botonEliminarAdmin:hover {
+	margin-right: 1vw;
+  }
+  
+  .botonEliminarAdmin:hover {
 	border: 1.5px solid red;
-}
-
-.botonEliminarAdmin:active {
+  }
+  
+  .botonEliminarAdmin:active {
 	border: 2px solid #d4af37;
-}
-
-.botonModificarAdmin {
+  }
+  
+  .botonModificarAdmin {
 	border: 1px solid black;
 	height: 2vw;
-}
-
-.botonModificarAdmin:hover {
+  }
+  
+  .botonModificarAdmin:hover {
 	border: 1.5px solid orange;
-}
-
-.botonModificarAdmin:active {
+  }
+  
+  .botonModificarAdmin:active {
 	border: 2px solid #d4af37;
-}
+  }
+  
