--- a/src/app/administrador/detalle-instalacion/detalle-instalacion.component.html
+++ b/src/app/administrador/detalle-instalacion/detalle-instalacion.component.html
@@ -2,7 +2,7 @@
   @if (instalacion) {
     <mat-card appearance="outlined" style="margin: 2vw; background-color: #f8f8f8; border-radius: 8px; box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2), 0px -4px 12px rgba(0, 0, 0, 0.1);">
       <mat-card-header style="display: flex; align-items: center; justify-content: space-between;">
-        
+
         <!-- Imagen Instalación -->
         <div style="display: flex; align-items: center; flex: 1; justify-content: flex-start;">
           <div *ngIf="instalacion.imagenInstalacion" style="border-radius: 8px; overflow: hidden; width: 60px; height: 60px; margin-right: 15px;">
@@ -62,7 +62,7 @@
       <!-- Acciones -->
       <mat-card-actions style="padding: 1.5vw 2vw; display: flex; justify-content: flex-end;">
         <button style="margin-right: 15px; box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);"
-          mat-raised-button color="primary" [routerLink]="['/altaInstalacion', instalacion.idInstalacion]">
+          mat-raised-button color="primary" routerLink="/altaInstalacion', instalacion.idInstalacion]">
           ✏️ Editar Instalación
         </button>
 
