--- a/src/app/administrador/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/administrador/detalle-usuario/detalle-usuario.component.html
@@ -2,7 +2,7 @@
   @if (usuario) {
     <mat-card appearance="outlined" style="margin: 2vw; background-color: #f8f8f8; border-radius: 8px; box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2), 0px -4px 12px rgba(0, 0, 0, 0.1);">
       <mat-card-header style="display: flex; align-items: center; justify-content: space-between;">
-        
+
         <!-- Imagen de Usuario -->
         <div style="display: flex; align-items: center; flex: 1; justify-content: flex-start;">
           <div *ngIf="usuario.imagenUsuario" style="border-radius: 50%; overflow: hidden; width: 60px; height: 60px; margin-right: 15px;">
@@ -50,7 +50,7 @@
       <!-- Acciones -->
       <mat-card-actions style="padding: 1.5vw 2vw; display: flex; justify-content: flex-end;">
         <button style="margin-right: 15px; box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);"
-          mat-raised-button color="primary" [routerLink]="['/altaUsuario', usuario.idUsuario]">
+          mat-raised-button color="primary" routerLink="/altaUsuario', usuario.idUsuario]">
           ✏️ Editar Usuario
         </button>
 
