--- a/src/app/administrador/lista-usuario/lista-usuario.component.html
+++ b/src/app/administrador/lista-usuario/lista-usuario.component.html
@@ -33,7 +33,7 @@
           <td>{{ usuario.emailUsuario }}</td>
           <td>{{ usuario.telefonoUsuario }}</td>
           <td>
-            <a mat-button class="botonDetalleAdmin" [routerLink]="['/detalleUsuario', usuario.idUsuario]">
+            <a mat-button class="botonDetalleAdmin" routerLink="/detalleUsuario', usuario.idUsuario]">
               <svg xmlns="http://www.w3.org/2000/svg"
                    width="1.8vw" height="1.8vw"
                    fill="currentColor"
