--- a/src/app/club/menu-club/menu-club.component.html
+++ b/src/app/club/menu-club/menu-club.component.html
@@ -4,13 +4,13 @@
     <div class="row  ">
       <div class="col-sm-1 col-md-1 cabeceraAbajo  "></div>
       <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-        <a [routerLink]="['/inicioClub']" class="letraCabeceraAbajo">INICIO</a>
+        <a routerLink="/inicioClub" class="letraCabeceraAbajo">INICIO</a>
       </div>
       <div class="col-sm-4 col-md-4 cabeceraAbajo ">
-        <a [routerLink]="['/inicioClub']" class="letraCabeceraAbajo">ALQUILERES</a>
+        <a routerLink="/inicioClub" class="letraCabeceraAbajo">ALQUILERES</a>
       </div>
       <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-        <a [routerLink]="['/inicioClub']" class="letraCabeceraAbajo">EVENTOS</a>
+        <a routerLink="/inicioClub" class="letraCabeceraAbajo">EVENTOS</a>
       </div>
       <div class="col-sm-1 col-md-1 cabeceraAbajo"></div>
 
@@ -23,13 +23,13 @@
     <div class="row">
       <div class="col-sm-1 col-md-1 cabeceraAbajo "></div>
       <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-        <a [routerLink]="['/inicioClub']" class="letraCabeceraAbajo">PLANTILLA</a>
+        <a routerLink="/inicioClub" class="letraCabeceraAbajo">PLANTILLA</a>
       </div>
       <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-        <a [routerLink]="['/inicioClub']" class="letraCabeceraAbajo">MARCADORES</a>
+        <a routerLink="/inicioClub" class="letraCabeceraAbajo">MARCADORES</a>
       </div>
       <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-        <a [routerLink]="['/inicioClub']" class="letraCabeceraAbajo">DESAFIOS</a>
+        <a routerLink="/inicioClub" class="letraCabeceraAbajo">DESAFIOS</a>
       </div>
       <div class="col-sm-2 col-md-2 cabeceraAbajo">
         <button mat-button [matMenuTriggerFor]="menuOpciones"
@@ -41,28 +41,28 @@
               d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
           </svg>
         </button>
-      
-        <mat-menu #menuOpciones="matMenu" 
+
+        <mat-menu #menuOpciones="matMenu"
         style="min-width: 12vw; font-size: 1.2vw; background-color: #003300; border-radius: 5px;">
-        
-        <button mat-menu-item (click)="cambiarIdioma()" 
+
+        <button mat-menu-item (click)="cambiarIdioma()"
           style="color: #003300;">Idioma</button>
-          
-        <button mat-menu-item (click)="mostrarAyuda()" 
+
+        <button mat-menu-item (click)="mostrarAyuda()"
           style="color: #003300;">Ayuda</button>
-          
-        <button mat-menu-item (click)="configuracion()" 
+
+        <button mat-menu-item (click)="configuracion()"
           style="color: #003300;">Configuración</button>
-          
+
         <mat-divider></mat-divider>
-        
-        <button mat-menu-item (click)="cerrarSesion()" 
+
+        <button mat-menu-item (click)="cerrarSesion()"
           style="color: #003300; ">Cerrar sesión</button>
-      
+
       </mat-menu>
-      
+
       </div>
-      
+
 
     </div>
   </div>
