--- a/src/app/jugador/menu-jugador/menu-jugador.component.html
+++ b/src/app/jugador/menu-jugador/menu-jugador.component.html
@@ -4,7 +4,7 @@
       <div class="row  ">
         <div class="col-sm-1 col-md-1 cabeceraAbajo  "></div>
         <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-          <a [routerLink]="['/inicioJugador']" class="letraCabeceraAbajo">INICIO</a>
+          <a routerLink="/inicioJugador" class="letraCabeceraAbajo">INICIO</a>
         </div>
         <div class="col-sm-4 col-md-4 cabeceraAbajo ">
           <a href="" class="letraCabeceraAbajo">ALQUILERES</a>
@@ -13,13 +13,13 @@
           <a href="" class="letraCabeceraAbajo">EVENTOS</a>
         </div>
         <div class="col-sm-1 col-md-1 cabeceraAbajo"></div>
-  
+
       </div>
     </div>
-  
+
     <!-- columna derecha -->
     <div class="col-sm-7 col-md-7 ">
-  
+
       <div class="row">
         <div class="col-sm-1 col-md-1 cabeceraAbajo "></div>
         <div class="col-sm-3 col-md-3 cabeceraAbajo ">
@@ -41,28 +41,28 @@
                 d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
             </svg>
           </button>
-        
-          <mat-menu #menuOpciones="matMenu" 
+
+          <mat-menu #menuOpciones="matMenu"
           style="min-width: 12vw; font-size: 1.2vw; background-color: #003300; border-radius: 5px;">
-          
-          <button mat-menu-item (click)="cambiarIdioma()" 
+
+          <button mat-menu-item (click)="cambiarIdioma()"
             style="color: #003300;">Idioma</button>
-            
-          <button mat-menu-item (click)="mostrarAyuda()" 
+
+          <button mat-menu-item (click)="mostrarAyuda()"
             style="color: #003300;">Ayuda</button>
-            
-          <button mat-menu-item (click)="configuracion()" 
+
+          <button mat-menu-item (click)="configuracion()"
             style="color: #003300;">Configuración</button>
-            
+
           <mat-divider></mat-divider>
-          
-          <button mat-menu-item (click)="cerrarSesion()" 
+
+          <button mat-menu-item (click)="cerrarSesion()"
             style="color: #003300; ">Cerrar sesión</button>
-        
+
         </mat-menu>
-        
+
         </div>
-  
+
       </div>
     </div>
   </div>
