--- a/src/app/administrador/lista-club/lista-club.component.html
+++ b/src/app/administrador/lista-club/lista-club.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-12 col-sm-12 mx-auto m-5" id="clubContainer">
     <!-- Campo de búsqueda -->
 
-<input type="text" [(ngModel)]="terminoBusqueda" (input)="filtroBusqueda()" placeholder="Buscar por nombre, email o teléfono" class="form-control mb-3 busqueda-input" />
+<input type="text" ngModel="terminoBusqueda" (input)="filtroBusqueda()" placeholder="Buscar por nombre, email o teléfono" class="form-control mb-3 busqueda-input" />
 
     <table class="tablaDatos">
       <thead style="background-color: #2783b8;">
