--- a/src/app/administrador/lista-club/lista-club.component.html
+++ b/src/app/administrador/lista-club/lista-club.component.html
@@ -25,7 +25,7 @@
           <td>{{ club.emailClub }}</td>
           <td>{{ club.telefonoClub }}</td>
           <td>
-            <a mat-button class="botonDetalleAdmin" routerLink="/detalleClub', club.idClub]">
+            <a mat-button class="botonDetalleAdmin" routerLink="/administrador/detalleClub', club.idClub]">
               <svg xmlns="http://www.w3.org/2000/svg" width="1.8vw" height="1.8vw" fill="currentColor" class="bi bi-eye-fill" style="color: blue; margin-bottom: 0.1vw" viewBox="0 0 16 16">
                 <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8Zm-8 4.5c-4.577 0-7.727-4.278-7.938-4.5C.273 8.278 3.423 4 8 4s7.727 4.278 7.938 4.5c-.21.222-3.36 4.5-7.938 4.5ZM8 5.5A2.5 2.5 0 1 0 8 10a2.5 2.5 0 0 0 0-5Zm0 1A1.5 1.5 0 1 1 8 9a1.5 1.5 0 0 1 0-3Z"></path>
               </svg>
