--- a/src/app/administrador/menu-admin/menu-admin.component.html
+++ b/src/app/administrador/menu-admin/menu-admin.component.html
@@ -1,19 +1,19 @@
 <div class="row p-2 " style="background-color: #004000; height: 3vw;">
   <!-- columnas con enlaces -->
   <div class="col-md-2 col-sm-2 cabeceraAbajo" style="height: 100%; padding: 0; display: flex; align-items: center;">
-    <a routerLink="inicioAdmin" class="letraCabeceraAbajo">INICIO</a>
+    <a routerLink="/administrador/inicioAdmin" class="letraCabeceraAbajo">INICIO</a>
   </div>
 
   <div class="col-md-2 col-sm-2 cabeceraAbajo" style="height: 100%; padding: 0; display: flex; align-items: center;">
-    <a routerLink="listaUsuario" class="letraCabeceraAbajo">USUARIOS</a>
+    <a routerLink="/administrador/listaUsuario" class="letraCabeceraAbajo">USUARIOS</a>
   </div>
 
   <div class="col-md-2 col-sm-2 cabeceraAbajo" style="height: 100%; padding: 0; display: flex; align-items: center;">
-    <a routerLink="listaInstalacion" class="letraCabeceraAbajo">INSTALACIONES</a>
+    <a routerLink="/administrador/listaInstalacion" class="letraCabeceraAbajo">INSTALACIONES</a>
   </div>
 
   <div class="col-md-2 col-sm-2 cabeceraAbajo" style="height: 100%; padding: 0; display: flex; align-items: center;">
-    <a routerLink="listaClub" class="letraCabeceraAbajo">CLUBES</a>
+    <a routerLink="/administrador/listaClub" class="letraCabeceraAbajo">CLUBES</a>
   </div>
 
   <div class="col-md-2 col-sm-2 cabeceraAbajo" style="height: 100%; padding: 0; display: flex; align-items: center;">
