--- a/src/app/administrador/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/administrador/detalle-usuario/detalle-usuario.component.html
@@ -50,7 +50,7 @@
       <!-- Acciones -->
       <mat-card-actions style="padding: 1.5vw 2vw; display: flex; justify-content: flex-end;">
         <button style="margin-right: 15px; box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);"
-          mat-raised-button color="primary" routerLink="/altaUsuario', usuario.idUsuario]">
+          mat-raised-button color="primary" [routerLink]="['/administrador/modificarUsuario', usuario.idUsuario]">
           ✏️ Editar Usuario
         </button>
 
