--- a/src/app/administrador/detalle-club/detalle-club.component.html
+++ b/src/app/administrador/detalle-club/detalle-club.component.html
@@ -52,7 +52,7 @@
 
       <mat-card-actions style="padding: 1.5vw 2vw; display: flex; justify-content: flex-end;">
         <button style="margin-right: 15px; box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);"
-          mat-raised-button color="primary" routerLink="/altaClub', club.idClub]">
+          mat-raised-button color="primary" [routerLink]="['/administrador/modificarClub', club.idClub]">
           ✏️ Editar Club
         </button>
 
