--- a/src/app/jugador/menu-jugador/menu-jugador.component.html
+++ b/src/app/jugador/menu-jugador/menu-jugador.component.html
@@ -4,13 +4,13 @@
       <div class="row  ">
         <div class="col-sm-1 col-md-1 cabeceraAbajo  "></div>
         <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-          <a routerLink="/inicioJugador" class="letraCabeceraAbajo">INICIO</a>
+          <a routerLink="/jugador/inicioJugador" class="letraCabeceraAbajo">INICIO</a>
         </div>
         <div class="col-sm-4 col-md-4 cabeceraAbajo ">
-          <a href="" class="letraCabeceraAbajo">ALQUILERES</a>
+          <a routerLink="/jugador/inicioJugador" class="letraCabeceraAbajo">ALQUILERES</a>
         </div>
         <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-          <a href="" class="letraCabeceraAbajo">EVENTOS</a>
+          <a routerLink="/jugador/inicioJugador" class="letraCabeceraAbajo">EVENTOS</a>
         </div>
         <div class="col-sm-1 col-md-1 cabeceraAbajo"></div>
 
@@ -23,13 +23,13 @@
       <div class="row">
         <div class="col-sm-1 col-md-1 cabeceraAbajo "></div>
         <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-          <a href="" class="letraCabeceraAbajo">MI CLUB</a>
+          <a routerLink="/jugador/inicioJugador" class="letraCabeceraAbajo">MI CLUB</a>
         </div>
         <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-          <a href="" class="letraCabeceraAbajo">MARCADORES</a>
+          <a routerLink="/jugador/inicioJugador" class="letraCabeceraAbajo">MARCADORES</a>
         </div>
         <div class="col-sm-3 col-md-3 cabeceraAbajo ">
-          <a href="" class="letraCabeceraAbajo">DESAFIOS</a>
+          <a routerLink="/jugador/inicioJugador" class="letraCabeceraAbajo">DESAFIOS</a>
         </div>
         <div class="col-sm-2 col-md-2 cabeceraAbajo">
           <button mat-button [matMenuTriggerFor]="menuOpciones"
