--- a/src/app/inicio/alta-instalacion/alta-instalacion.component.html
+++ b/src/app/inicio/alta-instalacion/alta-instalacion.component.html
@@ -77,12 +77,14 @@
 				  <td>
 					<label for="tipoDeCampo" class="formularioLabel">Tipos de Campo</label>
 					<div formArrayName="tipoDeCampo">
-					  <div *ngFor="let control of tipoDeCampo.controls; let i = index" class="mb-2">
-						<input type="text" formControlName="i" class="form-control" placeholder="Tipo de campo">
-						<button type="button" class="btn btn-danger" (click)="removeTipoDeCampo(i)" *ngIf="tipoDeCampo.length > 1">Eliminar</button>
+						<div *ngFor="let control of tipoDeCampo.controls; let i = index" class="mb-2">
+						  <input type="text" [formControlName]="i" class="form-control" placeholder="Tipo de campo">
+						  <button type="button" class="btn btn-danger" (click)="removeTipoDeCampo(i)" *ngIf="tipoDeCampo.length > 1">Eliminar</button>
+						</div>
+						<button type="button" class="btn btn-success" (click)="addTipoDeCampo()">Agregar otro tipo de campo</button>
 					  </div>
-					  <button type="button" class="btn btn-success" (click)="addTipoDeCampo()">Agregar otro tipo de campo</button>
-					</div>
+					  
+					  
 				  </td>
 				  <td>
 					<label for="serviciosInstalacion" class="formularioLabel">Servicios</label>
@@ -95,7 +97,7 @@
 			<!-- Botones de acción: "Registrar" o "Modificar" -->
 			<div class="text-center mt-4">
 			  <button *ngIf="!id" [disabled]="!instalacionForm.valid" type="submit" class="mat-button" style="color:blue ;font-size:1vw; border:none; background-color: #dfead5; margin-bottom: 2vw ;">Registrar</button>
-			  <button *ngIf="id" type="submit" class="btn btn-primary">Modificar Instalación</button>
+			  <button *ngIf="id" [disabled]="!instalacionForm.valid" type="submit" class="btn btn-primary">Modificar Instalación</button>
 			</div>
 		  </form>
 		</div>
