--- a/src/app/instalacion/menu-instalacion/menu-instalacion.component.html
+++ b/src/app/instalacion/menu-instalacion/menu-instalacion.component.html
@@ -4,15 +4,15 @@
     <div class="row">
       <div class="col-sm-1 col-md-1 cabeceraAbajo"></div>
       <div class="col-sm-3 col-md-3 cabeceraAbajo">
-        <a routerLink="/inicioInstalacion" class="letraCabeceraAbajo">INICIO</a>
+        <a routerLink="/instalacion/inicioInstalacion" class="letraCabeceraAbajo">INICIO</a>
       </div>
       <div class="col-sm-4 col-md-4 cabeceraAbajo">
-        <a routerLink="/inicioInstalacion" class="letraCabeceraAbajo"
+        <a routerLink="/instalacion/inicioInstalacion" class="letraCabeceraAbajo"
           >RESERVAS</a
         >
       </div>
       <div class="col-sm-3 col-md-3 cabeceraAbajo">
-        <a routerLink="/inicioInstalacion" class="letraCabeceraAbajo"
+        <a routerLink="/instalacion/inicioInstalacion" class="letraCabeceraAbajo"
           >EVENTOS</a
         >
       </div>
@@ -25,17 +25,17 @@
     <div class="row">
       <div class="col-sm-1 col-md-1 cabeceraAbajo"></div>
       <div class="col-sm-2 col-md-2 cabeceraAbajo">
-        <a routerLink="/inicioInstalacion" class="letraCabeceraAbajo"
+        <a routerLink="/instalacion/inicioInstalacion" class="letraCabeceraAbajo"
           >FINANZAS</a
         >
       </div>
       <div class="col-sm-4 col-md-4 cabeceraAbajo">
-        <a routerLink="/inicioInstalacion" class="letraCabeceraAbajo"
+        <a routerLink="/instalacion/inicioInstalacion" class="letraCabeceraAbajo"
           >ESTADISTICAS</a
         >
       </div>
       <div class="col-sm-3 col-md-3 cabeceraAbajo">
-        <a routerLink="/inicioInstalacion" class="letraCabeceraAbajo"
+        <a routerLink="/instalacion/inicioInstalacion" class="letraCabeceraAbajo"
           >NOTIFICACIONES</a
         >
       </div>
